
ACLOCAL_AMFLAGS = -I$(top_srcdir)/m4

bin_PROGRAMS = ana_wasym

COMMONLIBS = ../src/libTrigFTKAna.a ../src/Trees/libTrigFTKAnaNtD3PDPeter.a ../src/libTrigFTKAnaBase.a ../src/misc/libTrigFTKAnaMisc.a ../dg/libdatagraphics.a

ana_wasym_LDADD = -L@ROOTLIBDIR@ @ROOTLIBS@ $(COMMONLIBS) $(ROOFITLIBS) $(FLIBS) -L../lhapdf-5.8.8/LHAPDF/lib -lLHAPDF
ana_wasym_SOURCES = ana_wasym.cpp
ana_wasym_CXXFLAGS = $(BOOST_CPPFLAGS) $(DCAP_CPPFLAGS) -I@ROOTINCDIR@ -I$(top_srcdir) @ROOTCFLAGS@ @ROOTAUXCFLAGS@ $(FTKSIM_CPPFLAGS) $(COMMONANALYSIS_CPPFLAGS) -I../lhapdf-5.8.8/LHAPDF/include
ana_wasym_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(DCAP_LDFLAGS) $(XML_LDFLAGS) $(XML_LDFLAGS) $(ROOT_LDFLAGS) $(FTKSIM_LDFLAGS) $(FLIBS) $(COMMONANALYSIS_LDFLAGS)

CLEANFILES = *.o $(bin_PROGRAMS)
