
ACLOCAL_AMFLAGS = -I$(top_srcdir)/m4

bin_PROGRAMS = dgadd dgadd2 dgplot


dgadd_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) \
	$(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(PLPLOT_LDFLAGS) $(DCAP_LDFLAGS) $(ROOT_LDFLAGS)
dgadd_LDADD = ../dg/libdatagraphics.a $(READLINE_LDFLAGS) -L@ROOTLIBDIR@ @ROOTLIBS@
dgadd_SOURCES = DgAdd.cc
dgadd_CXXFLAGS = -I@ROOTINCDIR@ -I$(top_srcdir) $(BOOST_CPPFLAGS) $(PLPLOT_CPPFLAGS) @ROOTCFLAGS@ @ROOTAUXCFLAGS@

dgadd2_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) \
	$(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(PLPLOT_LDFLAGS) $(DCAP_LDFLAGS) $(ROOT_LDFLAGS)
dgadd2_LDADD = ../dg/libdatagraphics.a $(READLINE_LDFLAGS) -L@ROOTLIBDIR@ @ROOTLIBS@
dgadd2_SOURCES = DgAdd2.cc
dgadd2_CXXFLAGS = -I@ROOTINCDIR@ -I$(top_srcdir) $(BOOST_CPPFLAGS) $(PLPLOT_CPPFLAGS) @ROOTCFLAGS@ @ROOTAUXCFLAGS@

dgplot_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) \
	$(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(BOOST_REGEX_LIB) $(PLPLOT_LDFLAGS) $(DCAP_LDFLAGS) $(ROOT_LDFLAGS)
dgplot_LDADD = ../dg/libdatagraphics.a $(READLINE_LDFLAGS) -L@ROOTLIBDIR@ @ROOTLIBS@ $(ROOFITLIBS)
dgplot_SOURCES = DgPlot.cc
dgplot_CXXFLAGS = -I@ROOTINCDIR@ -I$(top_srcdir) $(BOOST_CPPFLAGS) $(PLPLOT_CPPFLAGS) @ROOTCFLAGS@ @ROOTAUXCFLAGS@

# dgdescwrite_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) \
# 	$(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(PLPLOT_LDFLAGS) $(DCAP_LDFLAGS) $(ROOT_LDFLAGS)
# # dgdescwrite_LDADD = ../dg/libdatagraphics.a -ldl -lreadline -lncurses -L@ROOTLIBDIR@ @ROOTLIBS@ $(ROOFITLIBS)
# dgdescwrite_LDADD = ../dg/libdatagraphics.a $(READLINE_LDFLAGS) -L@ROOTLIBDIR@ @ROOTLIBS@ $(ROOFITLIBS)
# dgdescwrite_SOURCES = DgDescWrite.cc
# dgdescwrite_CXXFLAGS = -I@ROOTINCDIR@ -I$(top_srcdir) $(BOOST_CPPFLAGS) $(PLPLOT_CPPFLAGS) @ROOTCFLAGS@ @ROOTAUXCFLAGS@

CLEANFILES = *.o $(bin_PROGRAMS)
