
ACLOCAL_AMFLAGS = -I$(top_srcdir)/m4

#bin_PROGRAMS = test_EventLoop cull_wrapper_events cleanup_training_wrapper merge_trained_tagger test_aen
bin_PROGRAMS = test_EventLoop cull_wrapper_events cleanup_training_wrapper test_aen

TRIGFTKANALIBS = ../src/libTrigFTKAna.a ../src/libTrigFTKAnaNtFTK.a ../src/libTrigFTKAnaNtD3PDWZ.a ../src/libTrigFTKAnaNtD3PDTop.a ../src/libTrigFTKAnaNtD3PDSingleTop.a ../src/libTrigFTKAnaNtD3PDPeter.a ../src/libTrigFTKAnaNtMisc.a  ../src/libTrigFTKAnaBase.a ../src/libTrigFTKAnaCTVMFT.a ../dg/libdatagraphics.a

test_EventLoop_LDADD = -L@ROOTLIBDIR@ @ROOTLIBS@ $(TRIGFTKANALIBS)
test_EventLoop_SOURCES = test_EventLoop.cc
test_EventLoop_CXXFLAGS = $(BOOST_CPPFLAGS) $(DCAP_CPPFLAGS) -I@ROOTINCDIR@ -I$(top_srcdir) @ROOTCFLAGS@ @ROOTAUXCFLAGS@ $(FTKSIM_CPPFLAGS)
test_EventLoop_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(DCAP_LDFLAGS) $(ROOT_LDFLAGS) $(FTKSIM_LDFLAGS)

# test_randomness_LDADD = -L@ROOTLIBDIR@ @ROOTLIBS@ $(TRIGFTKANALIBS)
# test_randomness_SOURCES = test_randomness.cpp
# test_randomness_CXXFLAGS = $(BOOST_CPPFLAGS) $(DCAP_CPPFLAGS) -I@ROOTINCDIR@ -I$(top_srcdir) @ROOTCFLAGS@ @ROOTAUXCFLAGS@ $(FTKSIM_CPPFLAGS)
# test_randomness_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(DCAP_LDFLAGS) $(ROOT_LDFLAGS) $(FTKSIM_LDFLAGS)

cull_wrapper_events_LDADD = -L@ROOTLIBDIR@ @ROOTLIBS@ $(TRIGFTKANALIBS)
cull_wrapper_events_SOURCES = cull_wrapper_events.cpp
cull_wrapper_events_CXXFLAGS = $(BOOST_CPPFLAGS) $(DCAP_CPPFLAGS) -I@ROOTINCDIR@ -I$(top_srcdir) @ROOTCFLAGS@ @ROOTAUXCFLAGS@ $(FTKSIM_CPPFLAGS)
cull_wrapper_events_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(DCAP_LDFLAGS) $(ROOT_LDFLAGS) $(FTKSIM_LDFLAGS)

cleanup_training_wrapper_LDADD = -L@ROOTLIBDIR@ @ROOTLIBS@ $(TRIGFTKANALIBS)
cleanup_training_wrapper_SOURCES = cleanup_training_wrapper.cpp
cleanup_training_wrapper_CXXFLAGS = $(BOOST_CPPFLAGS) $(DCAP_CPPFLAGS) -I@ROOTINCDIR@ -I$(top_srcdir) @ROOTCFLAGS@ @ROOTAUXCFLAGS@ $(FTKSIM_CPPFLAGS)
cleanup_training_wrapper_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(DCAP_LDFLAGS) $(ROOT_LDFLAGS) $(FTKSIM_LDFLAGS)

merge_trained_tagger_LDADD = -L@ROOTLIBDIR@ @ROOTLIBS@ -lRooFit $(TRIGFTKANALIBS)
merge_trained_tagger_SOURCES = merge_trained_tagger.cpp
merge_trained_tagger_CXXFLAGS = $(BOOST_CPPFLAGS) $(DCAP_CPPFLAGS) -I@ROOTINCDIR@ -I$(top_srcdir) @ROOTCFLAGS@ @ROOTAUXCFLAGS@ $(FTKSIM_CPPFLAGS)
merge_trained_tagger_LDFLAGS = $(FLIBS) $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(DCAP_LDFLAGS) $(ROOT_LDFLAGS) $(FTKSIM_LDFLAGS)

# merge_trained_tagger_LDADD = -L@ROOTLIBDIR@ @ROOTLIBS@ -lRooFit $(TRIGFTKANALIBS)
# merge_trained_tagger_SOURCES = merge_trained_tagger.cpp
# merge_trained_tagger_CXXFLAGS = $(BOOST_CPPFLAGS) $(DCAP_CPPFLAGS) -I@ROOTINCDIR@ -I$(top_srcdir) @ROOTCFLAGS@ @ROOTAUXCFLAGS@ $(FTKSIM_CPPFLAGS)
# merge_trained_tagger_LDFLAGS = $(FLIBS) $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(DCAP_LDFLAGS) $(ROOT_LDFLAGS) $(FTKSIM_LDFLAGS) 

test_aen_LDADD = -L@ROOTLIBDIR@ @ROOTLIBS@ -lRooFit $(TRIGFTKANALIBS)
test_aen_SOURCES = test_aen.cpp
test_aen_CXXFLAGS = $(BOOST_CPPFLAGS) $(DCAP_CPPFLAGS) -I@ROOTINCDIR@ -I$(top_srcdir) @ROOTCFLAGS@ @ROOTAUXCFLAGS@ $(FTKSIM_CPPFLAGS)
test_aen_LDFLAGS = $(FLIBS) $(BOOST_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SERIALIZATION_LIB) $(DCAP_LDFLAGS) $(ROOT_LDFLAGS) $(FTKSIM_LDFLAGS)

CLEANFILES = *.o $(bin_PROGRAMS)
